[project]
name = "openshift-ai-manager"
version = "0.1.0"
description = "A Python tool for managing OpenShift clusters and deploying ODH/RHOAI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "typer>=0.17.3",
]

[project.scripts]
oai-manager = "openshift_ai_manager.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
